<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

        <ImageView
        android:id="@+id/imageView1"
        android:layout_width="fill_parent"
        android:layout_height="500dp"
        android:contentDescription="@string/bakgrunn"
        android:scaleType="fitXY"
        android:src="@drawable/background" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:contentDescription="@string/logo"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_centerHorizontal="true"
        android:text="@string/forklaring" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_alignRight="@+id/imageView2"
        android:layout_marginRight="110dp"
        android:layout_below="@+id/textView1"
        android:src="@drawable/btn_back"
        android:onClick="tilbakeKnapp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView1"
        android:layout_alignTop="@+id/imageButton1"
        android:layout_marginRight="10dp"
        android:src="@drawable/btn_start"
        android:onClick="StartSpill" />

</RelativeLayout>