<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="462dp"
    tools:context=".MainActivity" >
    
    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="462dp"
        android:scaleType="fitXY"
        android:contentDescription="@string/bakgrunn"
        android:src="@drawable/background" />
    
    <ImageView
	    android:id="@+id/spmsider"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignRight="@+id/hint"
	    android:layout_below="@+id/button4"
	    android:layout_marginTop="10dp"
	    android:layout_centerHorizontal="true"
	    android:contentDescription="@string/spmleft"
	    android:src="@drawable/spm1" />
    
    <ImageButton
	    android:id="@+id/button5"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentLeft="true"
	    android:layout_alignParentTop="true"
	    android:contentDescription="@string/hintknapp"
	    android:onClick="hintKnapp"
	    android:src="@drawable/hint2" />

	<ImageButton
	    android:id="@+id/button6"
	    android:layout_width="wrap_content"
	    android:layout_height="wrap_content"
	    android:layout_alignParentRight="true"
	    android:layout_alignParentTop="true"
	    android:contentDescription="@string/bhintknapp"
	    android:onClick="bhintKnapp"
	    android:src="@drawable/hint" />

    <TextView
        android:id="@+id/question"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/countdown"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="30dp"
		android:layout_marginBottom="20dp"
        android:textSize="16sp"
        android:gravity="center"
        android:text="spm" />
	
	<Button
        android:id="@+id/button1"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
		android:layout_below="@+id/question"
		android:layout_marginTop="10dp"
		android:layout_centerHorizontal="true"
		android:text="" />

    <Button
        android:id="@+id/button2"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
		android:layout_below="@+id/button1"
		android:layout_marginTop="10dp"
		android:layout_centerHorizontal="true"
        android:text="" />
    
    <Button
        android:id="@+id/button3"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
		android:layout_below="@+id/button2"
		android:layout_centerHorizontal="true"
        android:text="" />
    
    <Button
        android:id="@+id/button4"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
		android:layout_below="@+id/button3"
		android:layout_marginTop="10dp"
		android:layout_centerHorizontal="true"
        android:text="" />

	<TextView
	    android:id="@+id/countdown"
	    android:layout_width="130dp"
	    android:layout_height="wrap_content"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="10dp"
	    android:gravity="center"
	    android:textSize="16sp" 
	    android:text="timer"/>

	<TextView
	    android:id="@+id/hint"
	    android:layout_width="280dp"
	    android:layout_height="50dp"
	    android:layout_below="@+id/button4"
	    android:layout_centerHorizontal="true"
	    android:layout_marginTop="60dp"
	    android:gravity="center"
	    android:textSize="12sp"
	    android:visibility="invisible" />

</RelativeLayout>